--- a/ops/docker/Dockerfile.packages
+++ b/ops/docker/Dockerfile.packages
@@ -122,6 +122,10 @@ FROM base as wd-mon
 WORKDIR /opt/optimism/packages/chain-mon
 CMD ["start:wd-mon"]
 
+FROM base as fault-wd-mon
+WORKDIR /opt/optimism/packages/chain-mon
+CMD ["start:fault-wd-mon"]
+
 FROM base as contracts-bedrock
 WORKDIR /opt/optimism/packages/contracts-bedrock
 CMD ["deploy"]
