--- a/packages/chain-mon/package.json
+++ b/packages/chain-mon/package.json
@@ -16,6 +16,7 @@
     "dev:replica-mon": "tsx watch ./src/replica-mon/service.ts",
     "dev:wallet-mon": "tsx watch ./src/wallet-mon/service.ts",
     "dev:wd-mon": "tsx watch ./src/wd-mon/service.ts",
+    "dev:fault-wd-mon": "tsx ./src/fault-wd-mon/service.ts",
     "dev:initialized-upgraded-mon": "tsx watch ./src/initialized-upgraded-mon/service.ts",
     "start:balance-mon": "tsx ./src/balance-mon/service.ts",
     "start:drippie-mon": "tsx ./src/drippie-mon/service.ts",
@@ -24,6 +25,7 @@
     "start:replica-mon": "tsx ./src/replica-mon/service.ts",
     "start:wallet-mon": "tsx ./src/wallet-mon/service.ts",
     "start:wd-mon": "tsx ./src/wd-mon/service.ts",
+    "start:fault-wd-mon": "tsx ./src/fault-wd-mon/service.ts",
     "start:initialized-upgraded-mon": "tsx ./src/initialized-upgraded-mon/service.ts",
     "test": "hardhat test",
     "test:coverage": "nyc hardhat test && nyc merge .nyc_output coverage.json",
