contracts-bedrock: remove cannon deps on bindings
Removes `cannon` deps on `op-bindings` package following
a pattern similar to https://github.com/ethereum-optimism/optimism/pull/10225.
Includes test coverage of the new functions and is the minimal diff to
get things working.

Ideally there was a canonical forge artifact type that is used but for
now we don't worry about it. This unblocks further work on removing the
bindings from the monorepo, greatly improving devex.

--- a/packages/contracts-bedrock/.gitignore
+++ b/packages/contracts-bedrock/.gitignore
@@ -1,6 +1,8 @@
 # Artifacts and Cache
 artifacts
 forge-artifacts
+!forge-artifacts/artifact_loader.go
+!forge-artifacts/artifact_loader_test.go
 cache
 broadcast
 kout-deployment
