op-program: Add reproducibility check for op-program 0.3.0

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1142,6 +1142,8 @@ jobs:
               echo 'export EXPECTED_PRESTATE_HASH="0x038942ec840131a63c49fa514a3f0577ae401fd5584d56ad50cdf5a8b41d4538"' >> $BASH_ENV
             elif [[ "<<parameters.version>>" == "0.2.0" ]]; then
               echo 'export EXPECTED_PRESTATE_HASH="0x031e3b504740d0b1264e8cf72b6dde0d497184cfb3f98e451c6be8b33bd3f808"' >> $BASH_ENV
+            elif [[ "<<parameters.version>>" == "0.3.0" ]]; then
+              echo 'export EXPECTED_PRESTATE_HASH="0x034c8cc69f22c35ae386a97136715dd48aaf97fd190942a111bfa680c2f2f421"' >> $BASH_ENV
             else
               echo "Unknown prestate version <<parameters.version>>"
               exit 1
@@ -2345,6 +2347,6 @@ workflows:
       - preimage-reproducibility:
           matrix:
             parameters:
-              version: ["0.1.0", "0.2.0"]
+              version: ["0.1.0", "0.2.0", "0.3.0"]
           context:
             slack
