--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1758,6 +1758,11 @@ workflows:
           on_changes: cannon,packages/contracts-bedrock/src/cannon
           uses_artifacts: true
           requires: ["go-mod-download", "pnpm-monorepo"]
+      - fuzz-golang:
+          name: op-e2e-fuzz
+          package_name: op-e2e
+          on_changes: op-e2e
+          requires: [ "go-mod-download" ]
       - go-test:
           name: op-heartbeat-tests
           module: op-heartbeat
