--- a/packages/contracts-bedrock/.gitignore
+++ b/packages/contracts-bedrock/.gitignore
@@ -29,6 +29,7 @@ deployments/hardhat
 deployments/getting-started
 deployments/*/.deploy
 deployments/1337
+deployments/31337-deploy.json
 
 # Devnet config which changes with each 'make devnet-up'
 deploy-config/devnetL1.json
