--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1761,8 +1761,9 @@ workflows:
       - fuzz-golang:
           name: op-e2e-fuzz
           package_name: op-e2e
-          on_changes: op-e2e
-          requires: [ "go-mod-download" ]
+          on_changes: op-e2e,packages/contracts-bedrock/src
+          uses_artifacts: true
+          requires: ["go-mod-download", "pnpm-monorepo"]
       - go-test:
           name: op-heartbeat-tests
           module: op-heartbeat
