--- a/ops/docker/op-stack-go/Dockerfile
+++ b/ops/docker/op-stack-go/Dockerfile
@@ -104,9 +104,10 @@ FROM --platform=$BUILDPLATFORM builder as op-conductor-builder
 ARG OP_CONDUCTOR_VERSION=v0.0.0
 RUN --mount=type=cache,target=/root/.cache/go-build cd op-conductor && make op-conductor  \
     GOOS=$TARGETOS GOARCH=$TARGETARCH GITCOMMIT=$GIT_COMMIT GITDATE=$GIT_DATE  VERSION="$OP_CONDUCTOR_VERSION"
+
+FROM --platform=$BUILDPLATFORM builder as da-server-builder
 RUN --mount=type=cache,target=/root/.cache/go-build cd op-plasma && make da-server  \
     GOOS=$TARGETOS GOARCH=$TARGETARCH GITCOMMIT=$GIT_COMMIT GITDATE=$GIT_DATE
-
 
 FROM --platform=$TARGETPLATFORM $TARGET_BASE_IMAGE as cannon-target
 COPY --from=cannon-builder /app/cannon/bin/cannon /usr/local/bin/
@@ -153,3 +154,7 @@ CMD ["op-proposer"]
 FROM --platform=$TARGETPLATFORM $TARGET_BASE_IMAGE as op-conductor-target
 COPY --from=op-conductor-builder /app/op-conductor/bin/op-conductor /usr/local/bin/
 CMD ["op-conductor"]
+
+FROM --platform=$TARGETPLATFORM $TARGET_BASE_IMAGE as da-server-target
+COPY --from=da-server-builder /app/op-plasma/bin/da-server /usr/local/bin/
+CMD ["da-server"]
