--- a/.github/workflows/tag-service.yml
+++ b/.github/workflows/tag-service.yml
@@ -34,6 +34,7 @@ on:
           - proxyd
           - ufm-metamask
           - op-contracts
+          - op-conductor
       prerelease:
         description: Increment major/minor/patch as prerelease?
         required: false
