--- a/op-service/Makefile
+++ b/op-service/Makefile
@@ -1,6 +1,3 @@
-PROTOS := ./proto/src
-PROTO_GEN := ./proto/gen
-
 test:
 	go test -v ./...
 
@@ -11,9 +8,7 @@ generate-mocks:
 	test \
 	lint \
 	generate-mocks \
-	fuzz \
-	clean \
-	protoc
+	fuzz
 
 fuzz:
 	go test -run NOTAREALTEST -v -fuzztime 10s -fuzz FuzzExecutionPayloadUnmarshal ./eth
@@ -24,15 +19,3 @@ fuzz:
 	go test -run NOTAREALTEST -v -fuzztime 10s -fuzz FuzzEncodeDecodeBlob ./eth
 	go test -run NOTAREALTEST -v -fuzztime 10s -fuzz FuzzDetectNonBijectivity ./eth
 	go test -run NOTAREALTEST -v -fuzztime 10s -fuzz FuzzEncodeScalar ./eth
-
-clean:
-	find $(PROTO_GEN) -name "*.pb.go" -type f | xargs rm -rf
-	mkdir -p $(PROTO_GEN)
-
-protoc: clean
-	protoc -I $(PROTOS) \
-	--go_out=$(PROTO_GEN) \
-	--go_opt=paths=source_relative \
-	--go-grpc_out=$(PROTO_GEN) \
-	--go-grpc_opt=paths=source_relative \
-	$$(find $(PROTOS) -name '*.proto')
