--- a/ops-bedrock/docker-compose.yml
+++ b/ops-bedrock/docker-compose.yml
@@ -7,7 +7,9 @@ version: '3.4'
 volumes:
   l1_data:
   l2_data:
+  replica_l2_data:
   safedb_data:
+  replica_safedb_data:
   challenger_data:
   da_data:
   op_log:
@@ -47,6 +49,25 @@ services:
       - "--authrpc.jwtsecret=/config/test-jwt-secret.txt"
     environment:
       GETH_MINER_RECOMMIT: 100ms
+
+  l2-replica:
+    build:
+      context: .
+      dockerfile: Dockerfile.l2
+    ports:
+      - "9545:8545"
+      - "8060:6060"
+    volumes:
+      - "replica_l2_data:/db"
+      - "${PWD}/../.devnet/genesis-l2.json:/genesis.json"
+      - "${PWD}/test-jwt-secret.txt:/config/test-jwt-secret.txt"
+    entrypoint:  # pass the L2 specific flags by overriding the entry-point and adding extra arguments
+      - "/bin/sh"
+      - "/entrypoint.sh"
+      - "--authrpc.jwtsecret=/config/test-jwt-secret.txt"
+    environment:
+      GETH_MINER_RECOMMIT: 100ms
+
 
   op-node:
     depends_on:
@@ -97,6 +118,49 @@ services:
       - "${PWD}/test-jwt-secret.txt:/config/test-jwt-secret.txt"
       - "${PWD}/../.devnet/rollup.json:/rollup.json"
       - op_log:/op_log
+
+  op-node-replica:
+    depends_on:
+      - op_stack_go_builder
+      - l1
+      - l2-replica
+    build:
+      context: ../
+      dockerfile: ./op-node/Dockerfile
+      args:
+        OP_STACK_GO_BUILDER: us-docker.pkg.dev/oplabs-tools-artifacts/images/op-stack-go:devnet
+    image: us-docker.pkg.dev/oplabs-tools-artifacts/images/op-node:devnet
+    command: >
+      op-node
+      --l1=ws://l1:8546
+      --l2=http://l2-replica:8551
+      --l2.jwt-secret=/config/test-jwt-secret.txt
+      --rollup.config=/rollup.json
+      --rpc.addr=0.0.0.0
+      --rpc.port=8545
+      --p2p.listen.ip=0.0.0.0
+      --p2p.listen.tcp=9003
+      --p2p.listen.udp=9003
+      --p2p.scoring.peers=light
+      --p2p.ban.peers=true
+      --p2p.bootnodes=enr:-JW4QJ-h2z_ozjrMImLCw9ZOwRlvZpft2aynwlUMaM6DNxSeA-1w5xRdGOXy7qAymoTr0Rj6WOrXFRd9d4u67_6TwCyGAY861zhpgmlkgnY0h29wc3RhY2uDhQcAiXNlY3AyNTZrMaEDTRL4-ZzyDFRQUUbxlPeQapcEQ62P_GrmunkyP7Ff8iiDdGNwgiMrg3VkcIIjKw id=4a3a62517dec9026c2e204f48c3229ec621644789d7f61faa82c6d0e5f97d43d
+      --metrics.enabled
+      --metrics.addr=0.0.0.0
+      --metrics.port=7300
+      --pprof.enabled
+      --rpc.enable-admin
+      --safedb.path=/db
+      --plasma.enabled=${PLASMA_ENABLED}
+      --plasma.da-server=http://da-server:3100
+    ports:
+      - "7546:8545"
+      - "9004:9003"
+      - "7304:7300"
+      - "6064:6060"
+    volumes:
+      - "replica_safedb_data:/db"
+      - "${PWD}/test-jwt-secret.txt:/config/test-jwt-secret.txt"
+      - "${PWD}/../.devnet/rollup.json:/rollup.json"
 
   op-proposer:
     depends_on:
