--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -20,6 +20,15 @@ jobs:
       - name: Remove package.json
         run: rm packages/contracts-bedrock/package.json
 
+      - name: Install forge
+        run: |
+          curl -L https://foundry.paradigm.xyz | bash
+          source $HOME/.bashrc
+          foundryup --version nightly-f625d0fa7c51e65b4bf1e8f7931cd1c6e2e285e9
+          echo 'export PATH=$HOME/.foundry/bin:$PATH' >> $BASH_ENV
+          source $HOME/.bashrc
+          forge --version
+
       - name: Run Slither
         uses: crytic/slither-action@v0.3.1
         id: slither
