--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -11,7 +11,9 @@ jobs:
   slither-analyze:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
+        with:
+          submodules: recursive
       - uses: actions/setup-python@v5
         with:
           python-version: '3.10'
