--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -32,6 +32,7 @@ jobs:
           slither packages/contracts-bedrock \
           --sarif results.sarif \
           --config-file packages/contracts-bedrock/slither.config.json
+          echo "::set-output name=sarif::results.sarif"
 
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v3
