--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -31,6 +31,7 @@ jobs:
         run: |
           slither packages/contracts-bedrock \
           --sarif results.sarif \
+          --triage-mode packages/contracts-bedrock/slither.db.json \
           --config-file packages/contracts-bedrock/slither.config.json
           echo "sarif=results.sarif" >> $GITHUB_OUTPUT
 
