Dispute game compatible wd mon (#10375)
* adding  fault-wd-mon

* adding faultproof wd-mon

* adding faultproof wd-mon

* fixing docker file

* fixing how we get disputegame given a withdrawal log

* code review fix

* fix type

--- a/packages/chain-mon/package.json
+++ b/packages/chain-mon/package.json
@@ -16,6 +16,7 @@
     "dev:replica-mon": "tsx watch ./contrib/replica-mon/service.ts",
     "dev:wallet-mon": "tsx watch ./contrib/wallet-mon/service.ts",
     "dev:wd-mon": "tsx watch ./src/wd-mon/service.ts",
+    "dev:faultproof-wd-mon": "tsx ./src/faultproof-wd-mon/service.ts",
     "dev:initialized-upgraded-mon": "tsx watch ./contrib/initialized-upgraded-mon/service.ts",
     "start:balance-mon": "tsx ./internal/balance-mon/service.ts",
     "start:drippie-mon": "tsx ./contrib/drippie/service.ts",
@@ -24,6 +25,7 @@
     "start:replica-mon": "tsx ./contrib/replica-mon/service.ts",
     "start:wallet-mon": "tsx ./contrib/wallet-mon/service.ts",
     "start:wd-mon": "tsx ./src/wd-mon/service.ts",
+    "start:faultproof-wd-mon": "tsx ./src/faultproof-wd-mon/service.ts",
     "start:initialized-upgraded-mon": "tsx ./contrib/initialized-upgraded-mon/service.ts",
     "test": "hardhat test",
     "test:coverage": "nyc hardhat test && nyc merge .nyc_output coverage.json",
