GasPriceOracle fjord fastlz update

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -239,15 +239,18 @@ jobs:
             - ".devnet/allocs-l1.json"
             - ".devnet/allocs-l2.json"
             - ".devnet/allocs-l2-delta.json"
+            - ".devnet/allocs-l2-ecotone.json"
             - ".devnet/addresses.json"
             - ".devnet-fault-proofs/allocs-l1.json"
             - ".devnet-fault-proofs/addresses.json"
             - ".devnet-fault-proofs/allocs-l2.json"
             - ".devnet-fault-proofs/allocs-l2-delta.json"
+            - ".devnet-fault-proofs/allocs-l2-ecotone.json"
             - ".devnet-plasma/allocs-l1.json"
             - ".devnet-plasma/addresses.json"
             - ".devnet-plasma/allocs-l2.json"
             - ".devnet-plasma/allocs-l2-delta.json"
+            - ".devnet-plasma/allocs-l2-ecotone.json"
             - "packages/contracts-bedrock/deploy-config/devnetL1.json"
             - "packages/contracts-bedrock/deployments/devnetL1"
       - notify-failures-on-develop
@@ -1018,6 +1021,7 @@ jobs:
             mkdir -p .devnet
             cp /tmp/workspace/.devnet<<parameters.fpac>>/allocs-l2.json .devnet/allocs-l2.json
             cp /tmp/workspace/.devnet<<parameters.fpac>>/allocs-l2-delta.json .devnet/allocs-l2-delta.json
+            cp /tmp/workspace/.devnet<<parameters.fpac>>/allocs-l2-ecotone.json .devnet/allocs-l2-ecotone.json
             cp /tmp/workspace/.devnet<<parameters.fpac>>/allocs-l1.json .devnet/allocs-l1.json
             cp /tmp/workspace/.devnet<<parameters.fpac>>/addresses.json .devnet/addresses.json
             cp /tmp/workspace/packages/contracts-bedrock/deploy-config/devnetL1.json packages/contracts-bedrock/deploy-config/devnetL1.json
@@ -1260,6 +1264,7 @@ jobs:
           paths:
             - ".devnet/allocs-l2.json"
             - ".devnet/allocs-l2-delta.json"
+            - ".devnet/allocs-l2-ecotone.json"
             - ".devnet/allocs-l1.json"
             - ".devnet/addresses.json"
             - "packages/contracts-bedrock/deploy-config/devnetL1.json"
