op-batcher: Support generic DA commitment type - add tests for generic DA client <-> interactions

--- a/ops-bedrock/docker-compose.yml
+++ b/ops-bedrock/docker-compose.yml
@@ -82,8 +82,8 @@ services:
       --pprof.enabled
       --rpc.enable-admin
       --safedb.path=/db
-      --plasma.enabled=true
-      --plasma.da-service=false
+      --plasma.enabled=${PLASMA_ENABLED}
+      --plasma.da-service=${PLASMA_DA_SERVICE}
       --plasma.da-server=http://da-server:3100
     ports:
       - "7545:8545"
@@ -156,8 +156,8 @@ services:
       OP_BATCHER_METRICS_ENABLED: "true"
       OP_BATCHER_RPC_ENABLE_ADMIN: "true"
       OP_BATCHER_BATCH_TYPE: 0
-      OP_BATCHER_PLASMA_ENABLED: "true"
-      OP_BATCHER_PLASMA_DA_SERVICE: "false"
+      OP_BATCHER_PLASMA_ENABLED: "${PLASMA_ENABLED}"
+      OP_BATCHER_PLASMA_DA_SERVICE: "${PLASMA_DA_SERVICE}"
       OP_BATCHER_PLASMA_DA_SERVER: "http://da-server:3100"
 
   op-challenger:
