--- a/.gitmodules
+++ b/.gitmodules
@@ -23,3 +23,6 @@
 [submodule "packages/contracts-bedrock/lib/lib-keccak"]
 	path = packages/contracts-bedrock/lib/lib-keccak
 	url = https://github.com/ethereum-optimism/lib-keccak
+[submodule "packages/contracts-bedrock/lib/solady-v0.0.158"]
+	path = packages/contracts-bedrock/lib/solady-v0.0.158
+	url = https://github.com/Vectorized/solady
